<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cl_video_cloud"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fg_member_bar_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_hight"
            android:layout_alignParentTop="true"
            android:background="@color/top_bar_color"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_add_member"
                android:layout_width="@dimen/top_back_btn_width"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/app_main_title_size"
                android:text="新增"/>
            <LinearLayout
                android:id="@+id/fg_member_title"
                android:layout_width="fill_parent"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lb_member_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/member_list_title"
                    android:textColor="@color/white"
                    android:layout_marginLeft="-35dp"
                    android:textSize="@dimen/app_main_title_size" />

            </LinearLayout>
            <Button
                android:id="@+id/bt_search_member"
                android:layout_width="@dimen/top_back_btn_width"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_search"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fg_downloading_bar_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/downloading_bar_height"
            android:layout_alignParentTop="true"
            android:background="#ccccff"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lb_downloading_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/member_download_title"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fg_member_search_bar_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_hight_double_corss_10"
            android:layout_alignParentTop="true"
            android:background="@color/top_bar_color"
            android:visibility="gone"
            android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/top_bar_hight_corss_20"
                    android:layout_weight = "1"
                    android:gravity="center_vertical|left"
                    android:background="@drawable/bg_edittext_selector"
                    android:layout_marginLeft="@dimen/et_search_member_margin"
                    android:layout_marginRight="@dimen/et_search_member_margin_right"
                    android:layout_marginBottom="@dimen/et_search_member_margin"
                    android:singleLine="true"
                    android:hint="@string/hint_input_idnumber"
                    android:imeOptions="actionSearch"
                    android:textColor="@color/black"
                    android:textSize="@dimen/app_main_title_size" />

            <Button
                android:id="@+id/bt_quit_search_member"
                android:text="@string/cancel"
                android:layout_width="@dimen/top_back_btn_width"
                android:layout_height="match_parent"
                android:textSize="@dimen/app_main_title_size"
                android:textColor="@color/white"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_line" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:divider="@color/list_line"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:fastScrollEnabled="true"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </LinearLayout>
</RelativeLayout>